--- a/biblioteca virtual/ccs/contacto.html
+++ b/biblioteca virtual/ccs/contacto.html
@@ -16,7 +16,7 @@
         <h1>Contactanos</h1>
         <h2>horarios de atención</h2>
         <p>Lunes a Viernes de 8:00 am a 5:00 pm</p>
-        <img src="/picture/contactenos.png" width="10%">
+        <img src="/biblioteca virtual/Picture/contactenos.png" width="10%">
 </div>
 </body>
 </html>
