--- a/biblioteca virtual/ccs/nosotros.html
+++ b/biblioteca virtual/ccs/nosotros.html
@@ -14,6 +14,6 @@
     <div style="text-align: center;">
         <h1>¿Quienes Somos?</h1>
         <p>Somos una empresa creada en el 2025 para facilitar el acceso de recursos academicos mediante un sistema agil y seguro. con una plataforma diseñada para optimizar la admnistración de objetos para mejorar la expierncia de estudiantes y docentes</p>
-        <img src="/picture/Nosotros.jfif" width="50%"
+        <img src="/biblioteca virtual/Picture/Nosotros.jfif" width="50%"
 </body>
 </html>
