--- a/biblioteca virtual/ccs/servicios.html
+++ b/biblioteca virtual/ccs/servicios.html
@@ -19,7 +19,7 @@
             <h2 style="color: brown;">Prestamo de libros</h2>
             <img src="../Picture/Libros.jfif" width="75%">
             <p>El boleto a mundos inimaginables y epocas no conocidas</p>
-            <a href="#">Quiero conocer mas</a>
+            <a href="/biblioteca virtual/ccs/PrestamoLibros.html">Quiero conocer mas</a>
         </div>
         <div style="width: 30%; text-align: center;font-family: Arial, Helvetica, sans-serif">
             <h2 style="color: rgb(0, 162, 255);">Prestamo computadores</h2>
